--- a/styles.css
+++ b/styles.css
@@ -198,8 +198,20 @@ body {
     color: #C13584;
 }
 
-.fa-facebook {
-    color: #1877F2;
+.fa-twitter {
+    color: #1DA1F2;
+}
+
+.fa-patreon {
+    color: #F96854;
+}
+
+.fa-whatsapp {
+    color: #25D366;
+}
+
+.fa-discord {
+    color: #7289DA;
 }
 
 .fa-phone {
